--- a/flags/templates/home.html
+++ b/flags/templates/home.html
@@ -49,7 +49,7 @@
           <a href="#" class="brand">ChromeFiddle</a>
           <div class="btn-group pull-right">
             <a href="#" data-toggle="dropdown" class="btn dropdown-toggle">
-              <i class="icon-user"></i> Operating System
+              <i class="icon-hdd"></i> Operating System
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
@@ -94,7 +94,7 @@
         <div class="span9">
           <div class="hero-unit">
             <h1>Experiment with Google Chrome</h1>
-            <p>Navigate to "chrome://flags" in your Google Chrome URL bar to view cutting-edge features that haven't made it into the latest release yet.</p>
+            <p>Navigate to <a href="chrome://flags" target="_blank">chrome://flags</a> in your Google Chrome URL bar to view cutting-edge features that haven't made it into the latest release yet.</p>
             <p>We have detected that you are running <strong>Chrome 24.0.1312.57 on Mac OS.</strong></p>
             <p><a class="btn btn-primary btn-medium">Learn more »</a></p>
           </div>
