--- a/flags/templates/home.html
+++ b/flags/templates/home.html
@@ -63,10 +63,10 @@
           </div>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="/list">List</a></li>
-              <li><a href="/about">About</a></li>
-              <li><a href="/contact">Contact</a></li>
+              <li class="active"><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
+              <li><a href="/list"><i class="icon-list icon-white"></i> List</a></li>
+              <li><a href="/about"><i class="icon-briefcase icon-white"></i> About</a></li>
+              <li><a href="/contact"><i class="icon-envelope icon-white"></i> Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
