--- a/flags/templates/home.html
+++ b/flags/templates/home.html
@@ -1,159 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{{ TITLE }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% extends "base.html" %}
+{% block title %}ChromeFiddle{% endblock %}
 
-    <!-- Styles -->
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
-    </style>
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- favicon and touch icons -->
-    <!---
-    <link rel="shortcut icon" href="/static/ico/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png"> -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    
-  </head>
-
-  <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a href="#" class="brand">ChromeFiddle</a>
-          <div class="btn-group pull-right">
-            <a href="#" data-toggle="dropdown" class="btn dropdown-toggle">
-              <i class="icon-hdd"></i> Operating System
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Mac</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Windows</a></li>
-              <li><a href="#">Linux</a></li>
-              <li><a href="#">Chrome OS</a></li>
-              <li><a href="#">Android</a></li>
-            </ul>
-          </div>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
-              <li><a href="/list"><i class="icon-list icon-white"></i> List</a></li>
-              <li><a href="/about"><i class="icon-briefcase icon-white"></i> About</a></li>
-              <li><a href="/contact"><i class="icon-envelope icon-white"></i> Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
+<div class="row-fluid">
+  <div class="span3">
+    <div class="well sidebar-nav">
+      <ul class="nav nav-list">
+        <li class="nav-header">Operating System</li>
+        <li class="active"><a href="/mac">Mac</a></li>
+        <li><a href="/windows">Windows</a></li>
+        <li><a href="/linux">Linux</a></li>
+        <li><a href="/chrome-os">Chrome OS</a></li>
+        <li><a href="/android">Android</a></li>
+        <li class="nav-header">Type</li>
+        <li><a href="#">Stable</a></li>
+        <li><a href="#">Experimental</a></li>
+        <li><a href="#">Cutting-Edge</a></li>
+      </ul>
+    </div><!--/.well -->
+  </div><!--/span-->
+  <div class="span9">
+    <div class="hero-unit">
+      <h1>Experiment with Google Chrome</h1>
+      <p>Navigate to <a href="chrome://flags" target="_blank">chrome://flags</a> in your Google Chrome URL bar to view cutting-edge features that haven't made it into the latest release yet.</p>
+      <p>We have detected that you are running <strong>Chrome 24.0.1312.57 on Mac OS.</strong></p>
+      <p><a class="btn btn-primary btn-medium">Learn more »</a></p>
+    </div>
+    <div class="row-fluid">
+      <div class="span12 well well-large">
+        <p>Tab Overview</p>
+        <p>Swipe down with three fingers on your trackpad to see an overview of all your tabs. Click on a thumbnail to select it. Works great in fullscreen mode.</p>
       </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Operating System</li>
-              <li class="active"><a href="#">Mac</a></li>
-              <li><a href="#">Windows</a></li>
-              <li><a href="#">Linux</a></li>
-              <li><a href="#">Chrome OS</a></li>
-              <li><a href="#">Android</a></li>
-              <li class="nav-header">Type</li>
-              <li><a href="#">Stable</a></li>
-              <li><a href="#">Experimental</a></li>
-              <li><a href="#">Cutting-Edge</a></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-        <div class="span9">
-          <div class="hero-unit">
-            <h1>Experiment with Google Chrome</h1>
-            <p>Navigate to <a href="chrome://flags" target="_blank">chrome://flags</a> in your Google Chrome URL bar to view cutting-edge features that haven't made it into the latest release yet.</p>
-            <p>We have detected that you are running <strong>Chrome 24.0.1312.57 on Mac OS.</strong></p>
-            <p><a class="btn btn-primary btn-medium">Learn more »</a></p>
-          </div>
-          <div class="row-fluid">
-            <div class="span12 well well-large">
-              <p>Tab Overview</p>
-              <p>Swipe down with three fingers on your trackpad to see an overview of all your tabs. Click on a thumbnail to select it. Works great in fullscreen mode.</p>
-            </div>
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a href="#" class="btn">View details »</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a href="#" class="btn">View details »</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a href="#" class="btn">View details »</a></p>
-            </div><!--/span-->
-          </div><!--/row-->
-          <div class="row-fluid">
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a href="#" class="btn">View details »</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a href="#" class="btn">View details »</a></p>
-            </div><!--/span-->
-            <div class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a href="#" class="btn">View details »</a></p>
-            </div><!--/span-->
-          </div><!--/row-->
-        </div><!--/span-->
-      </div><!--/row-->
-
-      <hr>
-
-      <footer>
-        <p>&copy; ChromeFiddle 2013 | 
-          <a href="/about">About</a> | 
-          <a href="/contact">Contact</a> | 
-          <a href="/privacy">Privacy</a>
-        </p>
-      </footer>
-
-    </div>
-
-    <!--======= Javascript =======-->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-
-  </body>
-</html>
+      <div class="span4">
+        <h2>Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a href="#" class="btn">View details »</a></p>
+      </div><!--/span-->
+      <div class="span4">
+        <h2>Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a href="#" class="btn">View details »</a></p>
+      </div><!--/span-->
+      <div class="span4">
+        <h2>Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a href="#" class="btn">View details »</a></p>
+      </div><!--/span-->
+    </div><!--/row-->
+    <div class="row-fluid">
+      <div class="span4">
+        <h2>Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a href="#" class="btn">View details »</a></p>
+      </div><!--/span-->
+      <div class="span4">
+        <h2>Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a href="#" class="btn">View details »</a></p>
+      </div><!--/span-->
+      <div class="span4">
+        <h2>Heading</h2>
+        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <p><a href="#" class="btn">View details »</a></p>
+      </div><!--/span-->
+    </div><!--/row-->
+  </div><!--/span-->
+</div><!--/row-->
