Updated base and home templates.

--- a/flags/templates/base.html
+++ b/flags/templates/base.html
@@ -46,7 +46,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a href="#" class="brand">ChromeFiddle</a>
+          <a href="/" class="brand">ChromeFiddle</a>
           <div class="btn-group pull-right">
             <a href="#" data-toggle="dropdown" class="btn dropdown-toggle">
               <i class="icon-hdd"></i> Operating System
@@ -75,7 +75,7 @@
 
     <div class="container-fluid">
       {% block content %}
-        <h1>This is the base template.</h1>
+        <h1>ChromeFiddle</h1>
       {% endblock content %}  
 
       <!--footer-->
