--- a/flags/templates/home.html
+++ b/flags/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}ChromeFiddle{% endblock %}
 
+{% block content %}
 <div class="row-fluid">
   <div class="span3">
     <div class="well sidebar-nav">
@@ -30,21 +31,6 @@
         <p>Tab Overview</p>
         <p>Swipe down with three fingers on your trackpad to see an overview of all your tabs. Click on a thumbnail to select it. Works great in fullscreen mode.</p>
       </div>
-      <div class="span4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a href="#" class="btn">View details »</a></p>
-      </div><!--/span-->
-      <div class="span4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a href="#" class="btn">View details »</a></p>
-      </div><!--/span-->
-      <div class="span4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a href="#" class="btn">View details »</a></p>
-      </div><!--/span-->
     </div><!--/row-->
     <div class="row-fluid">
       <div class="span4">
@@ -65,3 +51,4 @@
     </div><!--/row-->
   </div><!--/span-->
 </div><!--/row-->
+{% endblock %}
