--- a/src/css/bootstrap.css
+++ b/src/css/bootstrap.css
@@ -4784,15 +4784,15 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .navbar-inner {
-  background-color: #007fff;
-  background-image: -moz-linear-gradient(top, #007fff, #007fff);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#007fff), to(#007fff));
-  background-image: -webkit-linear-gradient(top, #007fff, #007fff);
-  background-image: -o-linear-gradient(top, #007fff, #007fff);
-  background-image: linear-gradient(to bottom, #007fff, #007fff);
+  background-color: #363636;
+  background-image: -moz-linear-gradient(top, #363636, #363636);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#363636), to(#363636));
+  background-image: -webkit-linear-gradient(top, #363636, #363636);
+  background-image: -o-linear-gradient(top, #363636, #363636);
+  background-image: linear-gradient(to bottom, #363636, #363636);
   background-repeat: repeat-x;
   border-color: transparent;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff007fff', endColorstr='#ff007fff', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff363636', endColorstr='#ff363636', GradientType=0);
 }
 
 .navbar-inverse .brand,
