--- a/flags/templates/home.html
+++ b/flags/templates/home.html
@@ -24,7 +24,7 @@
           <h1>Experiment with Google Chrome</h1>
           <p>Navigate to <a href="chrome://flags" target="_blank">chrome://flags</a> in your Google Chrome URL bar to view cutting-edge features that haven't made it into the latest release yet.</p>
           <p>We have detected that you are running <strong>{{ browser.name }} {{ browser.version }}</strong> on <strong>{{ os }}</strong>.</p>
-          <p><a class="btn btn-primary btn-medium">Learn more »</a></p>
+          <p><a class="btn btn-primary btn-medium" href="/info">Learn more »</a></p>
         </div>
         {% for flag in supported_flags %}
             <div class="row-fluid">
