Added OS labels to full list page and updated base template.

--- a/flags/templates/base.html
+++ b/flags/templates/base.html
@@ -49,7 +49,7 @@
           <a href="/" class="brand">ChromeFiddle</a>
           <div class="btn-group pull-right">
             <a href="#" data-toggle="dropdown" class="btn dropdown-toggle">
-              <i class="icon-hdd"></i> Operating System
+              <i class="icon-hdd"></i>&nbsp;Operating System
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
@@ -62,10 +62,11 @@
           </div>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
-              <li><a href="/list"><i class="icon-list icon-white"></i> List</a></li>
-              <li><a href="/about"><i class="icon-briefcase icon-white"></i> About</a></li>
-              <li><a href="/contact"><i class="icon-envelope icon-white"></i> Contact</a></li>
+              <li class="active"><a href="/"><i class="icon-home icon-white"></i>&nbsp;Home</a></li>
+              <li><a href="/list"><i class="icon-list icon-white"></i>&nbsp;List</a></li>
+              <li><a href="/info"><i class="icon-info-sign icon-white"></i>&nbsp;Info</a></li>
+              <li><a href="/about"><i class="icon-briefcase icon-white"></i>&nbsp;About</a></li>
+              <li><a href="/contact"><i class="icon-envelope icon-white"></i>&nbsp;Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
