--- a/flags/templates/about.html
+++ b/flags/templates/about.html
@@ -3,10 +3,16 @@
 
 {% block content %}
     <div class="row-fluid">
-      <div class="span9 well well-large">
-        <p>About ChromeFiddle</p>
-        <p>ChromeFiddle was started as a personal project by Peter Schaadt.</p>
-      </div>
+        <div class="span9 well well-large">
+            <p><strong>About ChromeFiddle</strong></p>
+            <p>ChromeFiddle was started as a personal project by <a href="http://peterschaadt.com" target="_blank">Peter Schaadt</a>.</p>
+        </div>
     </div><!--/row-->
 
+    <div class="row-fluid">
+        <div class="span9 well well-large">
+            <p><strong>Development Stack</strong></p>
+            <p>ChromeFiddle was built using the loving combination of Python, Django, PostgreSQL, SQLite3, fabric, and virtualenv. This site is <span class="label label-info">Made in the USA</span> and hosted out of Chicago, Illinois. The source code repository is available on Github at <a href="http://github.com/peterfschaadt/chromefiddle" target="_blank">http://github.com/peterfschaadt/chromefiddle</a>. Feel free to <a href='/contact'>contact</a> me if you have any questions!</p>
+        </div>
+    </div><!--/row-->
 {% endblock %}
