Updated settings and repo link on about page.

--- a/flags/templates/about.html
+++ b/flags/templates/about.html
@@ -12,7 +12,7 @@
     <div class="row-fluid">
         <div class="span9 well well-large">
             <p><strong>Development Stack</strong></p>
-            <p>ChromeFiddle was built using the loving combination of Python, Django, PostgreSQL, SQLite3, fabric, and virtualenv. This site is <span class="label label-info">Made in the USA</span> and hosted out of Chicago, Illinois. The source code repository is available on Github at <a href="http://github.com/peterfschaadt/chromefiddle" target="_blank">http://github.com/peterfschaadt/chromefiddle</a>. Feel free to <a href='/contact'>contact</a> me if you have any questions!</p>
+            <p>ChromeFiddle was built using the loving combination of Python, Django, PostgreSQL, SQLite3, fabric, and virtualenv. This site is <span class="label label-info">Made in the USA</span> and hosted out of Chicago, Illinois. The source code repository is available on Github at <a href="https://github.com/peterfschaadt/chromefiddle" target="_blank">https://github.com/peterfschaadt/chromefiddle</a>. Feel free to <a href="/contact">contact</a> me if you have any questions!</p>
         </div>
     </div><!--/row-->
 {% endblock %}
