--- a/flags/templates/os.html
+++ b/flags/templates/os.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+    <h4><span class="label label-{{ os_slug }}">{{ os }}</span> has {{ os_flags.count }} flags available</h4>
+
     {% for flag in os_flags %}
         <div class="row-fluid">
             <div class="span9 well well-large">
