Updated templates with copy and some views now pass os_slug.

--- a/flags/templates/about.html
+++ b/flags/templates/about.html
@@ -4,14 +4,14 @@
 {% block content %}
     <div class="row-fluid">
         <div class="span9 well well-large">
-            <p><strong>About ChromeFiddle</strong></p>
-            <p>ChromeFiddle was started as a personal project by <a href="http://peterschaadt.com" target="_blank">Peter Schaadt</a>.</p>
+            <h3>About ChromeFiddle</h3>
+            <p>ChromeFiddle was started as a personal project by <a href="http://peterschaadt.com" target="_blank">Peter Schaadt</a> to track the newest experimental features in Google's Chrome browser. I am highly interested in emerging web standards and hope that this site will encourage other users to enable and disable these experimental web components to create a browser environment of their choosing.</p>
         </div>
     </div><!--/row-->
 
     <div class="row-fluid">
         <div class="span9 well well-large">
-            <p><strong>Development Stack</strong></p>
+            <h4><strong>Development Stack</strong></h4>
             <p>ChromeFiddle was built using the loving combination of Python, Django, PostgreSQL, SQLite3, fabric, and virtualenv. This site is <span class="label label-info">Made in the USA</span> and hosted out of Chicago, Illinois. The source code repository is available on Github at <a href="https://github.com/peterfschaadt/chromefiddle" target="_blank">https://github.com/peterfschaadt/chromefiddle</a>. Feel free to <a href="/contact">contact</a> me if you have any questions!</p>
         </div>
     </div><!--/row-->
