--- a/flags/templates/info.html
+++ b/flags/templates/info.html
@@ -14,7 +14,10 @@
 
     <div class="row-fluid">
         <div class="span9 well well-large">
-            <p>Where do we begin...</p>
+            <h4><strong>What is this and why do I want it?</strong></h4>
+            <p>Each Google Chrome release, <a href="https://www.google.com/intl/en/chrome/browser/index.html" target="_blank">Stable</a>, <a href="https://www.google.com/intl/en/chrome/browser/beta.html" target="_blank">Beta</a>, and <a href="https://www.google.com/intl/en/chrome/browser/index.html" target="_blank">Canary</a>, has unique experimental settings that are not enabled by default. Some of these settings control exciting new web features such as real-time <a href="http://www.webrtc.org">WebRTC</a>, <a href="http://www.chromium.org/spdy">SPDY</a>, and <a href="https://developers.google.com/native-client/">Native Client (NaCl)</a>. While these cutting-edge features are just appearing in your browser today, many of these features will gain stability and go on to be major features in future Google Chrome releases. </p>
+            <p>That said, there are reasons that Google hasn't enabled these settings and features by default. Some of these reasons may include performance and stability concerns so be mindful and disable any features that cause issues. The settings you enable in chrome://flags will be active for all Chrome users.</p>
+            <p>Each operating system, <a href="/mac"><span class="label label-mac-os-x">Mac OS X</span></a>, <a href="/windows"><span class="label label-windows">Windows</span></a>, <a href="/linux"><span class="label label-linux">Linux</span></a>, <a href="/chrome-os"><span class="label label-chrome-os">Chrome OS</span></a>, and <a href="/android"><span class="label label-android">Android</span></a>, all have a different set of experimental settings they can support. Some features may be exclusive to just one operating system.</p>
         </div>
     </div>
 {% endblock %}
