--- a/flags/templates/base.html
+++ b/flags/templates/base.html
@@ -83,9 +83,11 @@
         <hr>
         <footer>
             <p>&copy; ChromeFiddle 2013 |
+                <a href="/info">Info</a> |
                 <a href="/about">About</a> |
                 <a href="/contact">Contact</a> |
-                <a href="/privacy">Privacy</a>
+                <a href="/privacy">Privacy</a> |
+                <i class="icon-bullhorn"></i>Made by <a href="http://peterschaadt.com" target="_blank">Peter Schaadt</a>
             </p>
         </footer>
         <!--/footer-->
