--- a/flags/templates/500.html
+++ b/flags/templates/500.html
@@ -1,11 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>500 Error!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A site to track experimental settings for Google Chrome's browser">
+    <meta name="author" content="Peter Schaadt">
+
+    <!-- Styles -->
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+        body {
+            padding-top: 60px;
+            padding-bottom: 40px;
+        }
+        .sidebar-nav {
+            padding: 9px 0;
+        }
+    </style>
+    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- favicon and touch icons -->
+    <!---
+    <link rel="shortcut icon" href="/static/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/static/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png"> -->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
 </head>
+
 <body>
 
-    <h1>500 - Server Error</h1>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container-fluid">
+            <a data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a href="/" class="brand">ChromeFiddle</a>
+            <div class="btn-group pull-right">
+                <a href="#" data-toggle="dropdown" class="btn dropdown-toggle">
+                    <i class="icon-hdd"></i>&nbsp;Operating System
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="/mac">Mac</a></li>
+                    <li><a href="/windows">Windows</a></li>
+                    <li><a href="/linux">Linux</a></li>
+                    <li><a href="/chrome-os">Chrome OS</a></li>
+                    <li><a href="/android">Android</a></li>
+                </ul>
+            </div>
+            <div class="nav-collapse">
+                <ul class="nav">
+                    <li class="active"><a href="/"><i class="icon-home icon-white"></i>&nbsp;Home</a></li>
+                    <li><a href="/list"><i class="icon-list icon-white"></i>&nbsp;List</a></li>
+                    <li><a href="/info"><i class="icon-info-sign icon-white"></i>&nbsp;Info</a></li>
+                    <li><a href="/about"><i class="icon-briefcase icon-white"></i>&nbsp;About</a></li>
+                    <li><a href="/contact"><i class="icon-envelope icon-white"></i>&nbsp;Contact</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+
+    <div class="row-fluid">
+        <h2>500 Error - Server Error!</h2>
+        <p>Our server is having trouble handling your request. Please go back <a href="/">home</a> and try your request again.</p>
+    </div><!--/row-->
+
+    <!--footer-->
+    <hr>
+    <footer>
+        <p>&copy; ChromeFiddle 2013 |
+            <a href="/info">Info</a> |
+            <a href="/about">About</a> |
+            <a href="/contact">Contact</a> |
+            <a href="/privacy">Privacy</a> |
+            <i class="icon-bullhorn"></i>Made by <a href="http://peterschaadt.com" target="_blank">Peter Schaadt</a>
+        </p>
+    </footer>
+    <!--/footer-->
+</div><!--/container-fluid-->
+
+<!--======= Javascript =======-->
+<!-- Placed at the end of the document so the pages load faster -->
+<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 
 </body>
 </html>
