Updated templates and made formatting consistent.

--- a/flags/templates/list.html
+++ b/flags/templates/list.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+    <h4><strong>{{ all_flags.count }}</strong> flags total</h4>
+
     {% for flag in all_flags %}
         <div class="row-fluid">
             <div class="span9 well well-large">
