--- a/flags/templates/privacy.html
+++ b/flags/templates/privacy.html
@@ -7,10 +7,11 @@
         <div class="span9 well well-large">
             <h3>ChromeFiddle Privacy Policy</h3>
             <p><em>last updated: February 28th, 2013</em></p><br>
+
             <p>This Privacy Policy describes how ChromeFiddle maintains your privacy while you are using this web application. By using this site you agree to all of the Terms and Conditions listed below.</p>
 
             <h4><strong>User Privacy</strong></h4>
-            <p>We do not collect or retain any user information other than our server's error logs and the anonymous IP addresses and user agents detected by our analytics software. We absolutely will not distribute, sell, trade, nor release user information to third parties.</p>
+            <p>We absolutely WILL NOT distribute, sell, rent, trade, nor release user information to third parties or disclose the information of users on our mailing lists. We do not collect or retain any user information other than our server's error logs and the anonymous IP addresses and user agents detected by our analytics software. ChromeFiddle may only release personal information if required to by law, search warrant, court order, or subpoena, in which case we would make every attempt to contact affected users.</p>
 
             <h4><strong>Cookies</strong></h4>
             <p>We use cookies on this site to ensure a consistent experience for our users. Our cookie is a small file placed on your computer to help us collect statistics about our users (see Analytics below). Most web browsers will automatically accept our non-malicious cookies but you are welcome to decline them and continue to use our web site.</p>
@@ -18,8 +19,12 @@
             <h4><strong>Analytics</strong></h4>
             <p>We use <a href="http://www.google.com/analytics/" target="_blank">Google Analytics</a> for web site visitor analytics in order to understand where this site's users are referred from as well as which pages are most popular. We also use <a href="https://newrelic.com" target="_blank">New Relic</a> for web application monitoring to keep an eye on errors that our users run into and to maintain the overall speed and performance of this site. This information is for our own internal use only and will never be shared with any third parties or advertisers.</p>
 
+            <h4><strong>Notice</strong></h4>
+            <p>This site and its creator are not endorsed or sponsored by Google in any way, he just loves Google Chrome.</p>
+
             <h4><strong>Updates</strong></h4>
             <p>The date of this Privacy Policy's last update will be displayed at the top and bottom of this policy.</p><br>
+
             <p><em>last updated: February 28th, 2013</em></p>
         </div>
     </div><!--/row-->
