--- a/flags/templates/list.html
+++ b/flags/templates/list.html
@@ -3,13 +3,13 @@
 
 {% block content %}
 
-    <h4><strong>{{ all_flags.count }}</strong> flags total</h4>
+    <h4 xmlns="http://www.w3.org/1999/html"><strong>{{ all_flags.count }}</strong> flags total</h4>
 
     {% for flag in all_flags %}
         <div class="row-fluid">
             <div class="span9 well well-large">
                 <p>
-                    <i class="icon-flag"></i>&nbsp;<strong>{{ flag.name }}&nbsp;</strong>
+                    <i class="icon-flag"></i>&nbsp;<a href="{{ flag.id }}">{{ flag.name }}&nbsp;</a>
                     {# Add compatible operating system labels #}
                     {% if flag.is_mac %}
                         <a href="/mac"><span class="label label-mac-os-x">Mac OS X</span></a>
