Updated templates, fixed Android link.

--- a/flags/templates/about.html
+++ b/flags/templates/about.html
@@ -6,7 +6,7 @@
     <div class="row-fluid">
         <div class="span9 well well-large">
             <h3>About ChromeFiddle</h3>
-            <p>ChromeFiddle was started as a personal project by <a href="http://peterschaadt.com" target="_blank">Peter Schaadt</a> to track the newest experimental features in Google's Chrome browser. I am highly interested in emerging web standards and hope that this site will encourage other users to enable and disable these experimental web components to create a browser environment of their choosing.</p>
+            <p>ChromeFiddle was started as a personal project by <a href="http://peterschaadt.com" target="_blank">Peter Schaadt</a> to track the newest experimental features in Google's Chrome browser. As a web developer I am particularly interested in emerging web standards like <a href="/16">NaCl</a>, <a href="/81">WebRTC</a>, and <a href="/81">Web Intents</a>. I hope that this site will encourage other users to enable and disable these experimental web components to create a browser environment that suits them.</p>
         </div>
     </div><!--/row-->
 
