--- a/flags/templates/list.html
+++ b/flags/templates/list.html
@@ -24,7 +24,7 @@
                         <a href="/chrome-os"><span class="label label-chrome-os">Chrome OS</span></a>
                     {% endif %}
                     {% if flag.is_android %}
-                        <a href="/mac"><span class="label label-android">Android</span></a>
+                        <a href="/android"><span class="label label-android">Android</span></a>
                     {% endif %}
                 </p>
                 <p>{{ flag.description }}</p>
