--- a/flags/templates/base.html
+++ b/flags/templates/base.html
@@ -9,7 +9,9 @@
 
     <!-- Styles -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/chromefiddle_site.css" rel="stylesheet">
     <style type="text/css">
+
         body {
             padding-top: 60px;
             padding-bottom: 40px;
