--- a/flags/templates/os.html
+++ b/flags/templates/os.html
@@ -8,7 +8,7 @@
     {% for flag in os_flags %}
         <div class="row-fluid">
             <div class="span9 well well-large">
-                <p><i class="icon-flag"></i>&nbsp;<a href="{{ flag.id }}">{{ flag.name }}</a></p>
+                <p><i class="icon-flag"></i>&nbsp;<a href="/flags/{{ flag.id }}/">{{ flag.name }}</a></p>
                 <p>{{ flag.description }}</p>
             </div>
         </div><!--/row-->
