--- a/flags/templates/contact.html
+++ b/flags/templates/contact.html
@@ -4,9 +4,11 @@
 {% block content %}
 
     <div class="row-fluid">
-        <div class="span9 well well-large">
+        <div class="span6 well well-large">
 
-            <form action="/contact/" method="post">
+            <p>If you have any questions or comments, or would like to report any inaccuracies on the site, please don't hesitate to give me feedback!</p><br>
+
+            <form action="/contact" method="post">
                 {# Contact Form body #}
                 {% csrf_token %}
                 {{ form.non_field_errors }}
@@ -31,7 +33,7 @@
                 {# CC #}
                 <div class="contact-wrap">
                     {{ form.cc_myself.errors }}
-                    <label for="id_cc_myself">CC yourself?</label>
+                    <label for="id_cc_myself">Send yourself a copy?</label>
                     {{ form.cc_myself }}
                 </div>
                 <br>
