--- a/flags/templates/base.html
+++ b/flags/templates/base.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
+{% load ganalytics %}
+
 <head>
     <meta charset="utf-8">
     <title>{% block title %}Template Title{% endblock %}</title>
@@ -35,6 +38,9 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/static/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="/static/ico/apple-touch-icon-57-precomposed.png"> -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+
+    {# Google Analytics async #}
+    {% ganalytics %}
 
 </head>
 
