--- a/flags/templates/thanks.html
+++ b/flags/templates/thanks.html
@@ -6,7 +6,7 @@
     <div class="row-fluid">
         <div class="span6 well well-large">
 
-            <p>Thanks for sending me feedback! I'll take a look at your email and get right back to you with a personal response. May I suggest heading back to the <a href="/home">home page</a>?</p>
+            <p><i class="icon-envelope"></i>&nbsp;Thanks for sending me feedback! I'll take a look at your email and get right back to you with a personal response. May I suggest heading back to the <a href="/">home page</a>?</p>
 
         </div>
     </div><!--/row-->
