--- a/flags/templates/about.html
+++ b/flags/templates/about.html
@@ -6,14 +6,14 @@
     <div class="row-fluid">
         <div class="span9 well well-large">
             <h3>About ChromeFiddle</h3>
-            <p>ChromeFiddle was started as a personal project by <a href="http://peterschaadt.com" target="_blank">Peter Schaadt</a> to track the newest experimental features in Google's Chrome browser. As a web developer I am particularly interested in emerging web standards like <a href="/flags/16">NaCl</a>, <a href="/flags/82">WebGL</a>, and <a href="/flags/81">Web Intents</a>. I hope that this site will encourage other users to enable and disable these experimental web components to create a browser environment that suits them.</p>
+            <p>ChromeFiddle was started as a personal project by <a href="http://peterschaadt.com" target="_blank">Peter Schaadt</a> to track the newest experimental features in Google's <a href="https://www.google.com/intl/en/chrome/browser/index.html" target="_blank">Chrome</a> browser. As a web developer I am particularly interested in emerging web standards like <a href="/flags/16">NaCl</a>, <a href="/flags/82">WebGL</a>, and <a href="/flags/81">Web Intents</a>. I hope that this site will encourage other users to enable and disable these experimental web components to create a browser environment that suits them.</p>
         </div>
     </div><!--/row-->
 
     <div class="row-fluid">
         <div class="span9 well well-large">
             <h4><strong>Development Stack</strong></h4>
-            <p>ChromeFiddle was built using the loving combination of Python, Django, PostgreSQL, SQLite3, fabric, and virtualenv. This site is <span class="label label-info">Made in the USA</span> and hosted out of Chicago, Illinois. The source code repository is available on Github at <a href="https://github.com/peterfschaadt/chromefiddle" target="_blank">https://github.com/peterfschaadt/chromefiddle</a>. Feel free to <a href="/contact">contact</a> me if you have any questions!</p>
+            <p>ChromeFiddle was built using the loving combination of Python and the Django framework. Other tools used are PostgreSQL, SQLite3, fabric, and virtualenv. This site is <span class="label label-info">Made in the USA</span> in Sunnyvale, California and served by nginx and gunicorn in Chicago, Illinois. The source code repository is available on Github at <a href="https://github.com/peterfschaadt/chromefiddle" target="_blank">https://github.com/peterfschaadt/chromefiddle</a>. Feel free to <a href="/contact">contact</a> me if you have any questions or suggestions!</p>
         </div>
     </div><!--/row-->
 
