Updating list of advanced Chrome URLs.

--- a/flags/templates/advanced.html
+++ b/flags/templates/advanced.html
@@ -51,4 +51,19 @@
         </div>
     </div><!--/row-->
 
+    <div class="row-fluid">
+        <div class="span9 well well-large">
+            <h4><strong>List of Chrome URLs used only for debugging</strong></h4>
+            <ul>
+                <li>chrome://crash</li>
+                <li>chrome://kill</li>
+                <li>chrome://hang</li>
+                <li>chrome://shorthang</li>
+                <li>chrome://gpuclean</li>
+                <li>chrome://gpucrash</li>
+                <li>chrome://gpuhang</li>
+            </ul>
+        </div>
+    </div><!--/row-->
+
 {% endblock %}
